k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
    - host: "ticketing.dev.ketan"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
